src/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Open Sans', sans-serif;
    background-color: #eee;
}

main {
    display: flex;
    flex-direction: column;
    height: 100vh;
    padding-inline: 20px 10px;
    min-height: 0;
    align-items: center;
}

header {
    margin: 0 auto 10px;
    display: grid;
    justify-content: center;
    grid-template-columns: 3fr 1fr;
    align-items: center;
    justify-items: center;
    max-width: 400px;
    column-gap: 20px;
    /* border: 1px solid red; */
}

h1 {
    text-align: center;
    font-size: 3.0rem;
}

.refresh-icon {
    display: block;
    width: 50px;
    align-self: center;
    justify-self: end;
    transition: transform 0.2s ease;
}

.refresh-icon:hover {
    cursor: pointer;
    transform: scale(1.1);
}

.last-update {
    font-size: 1.1rem;
}

.search-form {
    margin: 10px auto 20px;
    width: 500px;

    @media (max-width: 900px) {
        width: 400px;
    }

    position: relative;
}

.search-icon {
    display: block;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 5px;
}

.search-bar {
    padding: 8px 10px 8px 30px;
    font-size: 1.2rem;
    border: 1px solid #fff;
    border-radius: 10px;
    width: 100%;
}

.search-bar::placeholder {
    font-size: 0.7em;
    font-style: italic;
}

.cards-wrapper {
    flex: 1;
    display: grid;
    grid-template-columns: repeat(auto-fit, 450px);
    grid-auto-rows: max-content;
    gap: 30px;
    overflow-y: auto;
    overflow-x: hidden;
    scrollbar-color: black;
    scrollbar-width: thin;
    margin-right: 10px;
    padding: 10px;
    outline: none;
    justify-content: center;
    max-width: 1400px;
    min-height: 0;
}

.card {
    background-color: rgba(128, 0, 128, 0.1);
    box-shadow: 1px 2px 12px #daa3da;
    border-radius: 12px;
    padding: 25px;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    font-family: 'Inter', sans-serif;
    width: 100%;
    position: relative;
}

.card-location {
    grid-column: 1;
    grid-row: 1;
    font-size: 2.0rem;
}

.card-icon {
    grid-column: 2 / 3;
    grid-row: 1;
    justify-self: center;
    display: block;
    height: 50px;
}

.card-temp-n-humid {
    grid-column: 3 / 4;
    grid-row: 1;
    justify-self: end;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.card-temperature {
    font-size: 2.5rem;
}

.card-description,
.card-humidity {
    font-size: 0.9rem;
}

.card-description {
    grid-column: 1 / -1;
    grid-row: 2;
    align-self: end;
}

.delete-card-btn,
.expand-card-btn {
    position: absolute;
    border-radius: 50%;
    background-color: rgba(0, 0, 0, 0.1);
    transition: transform 0.2s ease;
    opacity: 0.5;
    padding: 2px;
}

.delete-card-btn {
    left: 0;
    top: 0;
}

.expand-card-btn {
    right: 0;
    top: 0;
}

.delete-card-btn:hover,
.expand-card-btn:hover {
    cursor: pointer;
    transform: scale(1.1);
}

/* Layout for showing more information about a selected location */
header.details {
    display: block;
    max-width: 100vw;
    text-align: center;
}

.info-wrapper {
    width: 100%;
    margin-top: 20px;
    max-width: 700px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
}

.info-card {
    background-color: white;
    padding: 5px 10px;
    border-radius: 12px;
    box-shadow: 8px 8px 12px gray;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.info-card.forecast-card {
    grid-column: 1 / -1;
    display: grid;
    grid-template-columns: 1fr 30px 1fr;
    align-items: center;
    justify-items: center;
    row-gap: 10px;
    font-size: 1.3rem;
}

.info-card h2 {
    grid-column: 1 / -1;
    justify-self: start;
    font-size: 2.0rem;
    font-variant: small-caps;
}

.forecast-day {
    justify-self: start;
}

.forecast-icon {
    display: block;
    width: 30px;
    margin: 0 auto;
}

.forecast-minmax {
    justify-self: end;
}

.info-card.wind-card {
    grid-column: 1;
}

.wind-card table,
.astrology-card table {
    width: 100%;
    border-collapse: collapse;
}

.wind-card tr:not(:last-child) td,
.wind-card tr:not(:last-child) th,
.astrology-card tr:not(:last-child) td,
.astrology-card tr:not(:last-child) th {
    padding: 5px;
    border-bottom: 1px solid black;
}

.wind-card table td,
.astrology-card table td {
    text-align: right;
}

.wind-card table th,
.astrology-card table th {
    text-align: left;
}

.visibility-card :not(:first-child),
.humidity-card :not(:first-child),
.precipitation-card :not(:first-child),
.pressure-card :not(:first-child),
.cloudcover-card :not(:first-child) {
    text-align: center;
}

.info-large {
    font-size: 2.7rem;
}

.close-icon,
.info-refresh-icon {
    justify-self: center;
    display: block;
    width: 50px;
    transition: transform 0.2s ease;
}

.close-icon:hover,
.info-refresh-icon:hover {
    cursor: pointer;
    transform: scale(1.1);
}

.error {
    color: red;
    font-size: 1.3rem;
    text-align: center;
    font-style: italic;
}

